フィルターを追加
自分含むか、ゲームモード、試合時間、決着日時の4種類

--- a/minimas.css
+++ b/minimas.css
@@ -619,3 +619,7 @@ input:checked+.button::after {
   transition: transform var(--transition-duration) var(--transition-curve);
   transform: rotate(405deg);
 }
+
+.unmarkable {
+  opacity: 0.3;
+}
