--- a/minimas.css
+++ b/minimas.css
@@ -327,6 +327,7 @@ input:checked+.button::after {
 
 .flex-row {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .graph-selector--option {
@@ -609,6 +610,18 @@ input:checked+.button::after {
 
 .number {
   text-align: right;
+}
+
+.attention {
+  border-top: solid 1px rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  padding: 8px;
+  max-width: max-content;
+}
+
+.vertical-line {
+  border-right: solid 1px rgba(255, 255, 255, 0.2);
+  margin: 0 8px;
 }
 
 .summary-td {
