--- a/minimas.css
+++ b/minimas.css
@@ -46,7 +46,7 @@ body {
   width: 100%;
 }
 
-.link, .link:visited {
+.link:link, .link:visited {
   color: #eee;
   text-decoration: underline
 }
@@ -617,6 +617,10 @@ input:checked+.button::after {
   border-radius: 10px;
   padding: 8px;
   max-width: max-content;
+}
+
+.attention-child {
+  max-width: 50vw;
 }
 
 .vertical-line {
